# ysh

./: .gitignore  Cargo.toml  README.md
src/: completion.rs  data.rs  docs.rs  environment.rs  evaluate.rs  globals.rs  history.rs  input.rs  jobs.rs  main.rs  numeric.rs  parse.rs  pipeline.rs  planner.rs  reader.rs  span.rs  stream.rs  terminal.rs
src/editor/: basic.rs  mod.rs  vim.rs
src/input/: keybind.rs  mod.rs  render.rs
src/stream/: mod.rs  poly.rs
